# diffimg-xbee

./: .gitignore  AUTHORS.txt  CMakeLists.txt  CREDITS.txt  Changelog.txt  INSTALL.txt  NEWS.txt  README.os2  README.txt  TODO.txt  diffimg-portable.bat  diffimg.pro  formater.bat  tounix.sh  uncrustify.cfg
cmake/: FindQwt.cmake
lang/: diffimg_cs.qm  diffimg_cs.ts  diffimg_de.qm  diffimg_de.ts  diffimg_fr.qm  diffimg_fr.ts  diffimg_it.qm  diffimg_it.ts  diffimg_pt.qm  diffimg_pt.ts  diffimg_ro.qm  diffimg_ro.ts  diffimg_ru.qm  diffimg_ru.ts  diffimg_sv.qm  diffimg_sv.ts  diffimg_vi.qm  diffimg_vi.ts  diffimg_zh.qm  diffimg_zh.ts
misc/: diffimg-desktop.sh  diffimg-manpage.sh  postbuild-macx.sh
res/: Info.plist  diffimg.icns  diffimg.qrc  diffimg.rc
setup/: setup-x64.nsi  setup.nsi
src/: AboutDialog.cpp  AboutDialog.h  AppSettings.cpp  AppSettings.h  ChannelCurve.cpp  ChannelCurve.h  DiffImgWindow.cpp  DiffImgWindow.h  FilesDialog.cpp  FilesDialog.h  FilesManager.cpp  FilesManager.h  IMessageHandler.h  ImageNavigator.cpp  ImageNavigator.h  ImageView.cpp  ImageView.h  LogHandler.cpp  LogHandler.h  MiscFunctions.cpp  MiscFunctions.h  PaypalButton.cpp  PaypalButton.h  PropertyWidget.cpp  PropertyWidget.h  SplashScreen.cpp  SplashScreen.h  WipeItem.cpp  WipeItem.h  WipeMethod.h  main.cpp
src/formats/: BaseFormat.cpp  BaseFormat.h  FormatsManager.cpp  FormatsManager.h  FormatsRegistering.cpp  FormatsRegistering.h  YUVFormat.cpp  YUVFormat.h
src/metrics/: BaseMetric.cpp  BaseMetric.h  MetricsManager.cpp  MetricsManager.h  MetricsRegistering.cpp  MetricsRegistering.h  PerChannelMeanMetric.cpp  PerChannelMeanMetric.h  PerChannelMetric.cpp  PerChannelMetric.h  PerLuminanceMetric.cpp  PerLuminanceMetric.h  PerceptualMetric.cpp  PerceptualMetric.h
test/img1/: 16bits-2.tif  32bits-2.tif  IMG_0149.png.txt  testjp2000.jp2
test/img1/yuv/: README.txt  tulips_yuv444_prog_planar_qcif_176x144.yuv  tulips_yuyv422_prog_packed_qcif_176x144.yuv
test/img2/: 16bits-2.tif  32bits-2.tif  IMG_0149.png.txt  descript.ion  memorial.exr  testjp2000.jp2
test/img2/bigimg/: README.txt
test/img2/yuv/: tulips_yuv420_prog_planar_qcif_176x144.yuv  tulips_yuv422_prog_planar_qcif_176x144.yuv  tulips_yuv444_prog_planar_qcif_176x144.yuv  tulips_yuyv422_prog_packed_qcif_176x144.yuv
ui/: AboutDialog.ui  DiffImgWindow.ui  FilesDialog.ui
